--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
       <nav>
         <ul class="nav-list-items">
           <li class="nav-element-1">
-            <a class="nav-list" href="./index.html">Студия</a>
+            <a class="nav-list-1" href="./index.html">Студия</a>
           </li>
           <li class="nav-element-2">
-            <a class="nav-list-2" href="./portfolio.html">Портфолио</a>
+            <a class="nav-list" href="./portfolio.html">Портфолио</a>
           </li>
           <li class="nav-element-3">
             <a class="nav-list" href="">Контакты</a>
@@ -116,6 +116,7 @@
           <ul class="main-style">
             <li class="main-services-list">
               <img
+                class="img-work-element"
                 src="./images/designer.jpg"
                 alt=""
                 width="370"
@@ -127,6 +128,7 @@
             </li>
             <li class="main-services-list">
               <img
+                class="img-work-element"
                 src="./images/mobile_app.jpg"
                 alt=""
                 width="370"
@@ -136,6 +138,7 @@
             </li>
             <li class="main-services-list">
               <img
+                class="img-work-element"
                 src="./images/desktop_app.jpg"
                 alt=""
                 width="370"
@@ -170,7 +173,11 @@
                     href=""
                     aria-label="Ссылка на Instagram"
                   >
-                    <img src="./images/instagram.svg" alt="instagram" />
+                    <img
+                      class="img-team-social-element"
+                      src="./images/instagram.svg"
+                      alt="instagram"
+                    />
                   </a>
                 </li>
                 <li class="social-network-element">
@@ -179,7 +186,11 @@
                     href=""
                     aria-label="Ссылка на Twitter"
                   >
-                    <img src="./images/twitter.svg" alt="Twitter" />
+                    <img
+                      class="img-team-social-element"
+                      src="./images/twitter.svg"
+                      alt="Twitter"
+                    />
                   </a>
                 </li>
                 <li class="social-network-element">
@@ -188,7 +199,11 @@
                     href=""
                     aria-label="Ссылка на Facebook"
                   >
-                    <img src="./images/facebook.svg" alt="Facebook" />
+                    <img
+                      class="img-team-social-element"
+                      src="./images/facebook.svg"
+                      alt="Facebook"
+                    />
                   </a>
                 </li>
                 <li class="social-network-element">
@@ -197,7 +212,11 @@
                     href=""
                     aria-label="Ссылка на LinkedIn"
                   >
-                    <img src="./images/linkedin.svg" alt="LinkedIn" />
+                    <img
+                      class="img-team-social-element"
+                      src="./images/linkedin.svg"
+                      alt="LinkedIn"
+                    />
                   </a>
                 </li>
               </ul>
@@ -219,7 +238,11 @@
                     href=""
                     aria-label="Ссылка на Instagram"
                   >
-                    <img src="./images/instagram.svg" alt="instagram" />
+                    <img
+                      class="img-team-social-element"
+                      src="./images/instagram.svg"
+                      alt="instagram"
+                    />
                   </a>
                 </li>
                 <li class="social-network-element">
@@ -228,7 +251,11 @@
                     href=""
                     aria-label="Ссылка на Twitter"
                   >
-                    <img src="./images/twitter.svg" alt="Twitter" />
+                    <img
+                      class="img-team-social-element"
+                      src="./images/twitter.svg"
+                      alt="Twitter"
+                    />
                   </a>
                 </li>
                 <li class="social-network-element">
@@ -237,7 +264,11 @@
                     href=""
                     aria-label="Ссылка на Facebook"
                   >
-                    <img src="./images/facebook.svg" alt="Facebook" />
+                    <img
+                      class="img-team-social-element"
+                      src="./images/facebook.svg"
+                      alt="Facebook"
+                    />
                   </a>
                 </li>
                 <li class="social-network-element">
@@ -246,7 +277,11 @@
                     href=""
                     aria-label="Ссылка на LinkedIn"
                   >
-                    <img src="./images/linkedin.svg" alt="LinkedIn" />
+                    <img
+                      class="img-team-social-element"
+                      src="./images/linkedin.svg"
+                      alt="LinkedIn"
+                    />
                   </a>
                 </li>
               </ul>
@@ -268,7 +303,11 @@
                     href=""
                     aria-label="Ссылка на Instagram"
                   >
-                    <img src="./images/instagram.svg" alt="instagram" />
+                    <img
+                      class="img-team-social-element"
+                      src="./images/instagram.svg"
+                      alt="instagram"
+                    />
                   </a>
                 </li>
                 <li class="social-network-element">
@@ -277,7 +316,11 @@
                     href=""
                     aria-label="Ссылка на Twitter"
                   >
-                    <img src="./images/twitter.svg" alt="Twitter" />
+                    <img
+                      class="img-team-social-element"
+                      src="./images/twitter.svg"
+                      alt="Twitter"
+                    />
                   </a>
                 </li>
                 <li class="social-network-element">
@@ -286,7 +329,11 @@
                     href=""
                     aria-label="Ссылка на Facebook"
                   >
-                    <img src="./images/facebook.svg" alt="Facebook" />
+                    <img
+                      class="img-team-social-element"
+                      src="./images/facebook.svg"
+                      alt="Facebook"
+                    />
                   </a>
                 </li>
                 <li class="social-network-element">
@@ -295,7 +342,11 @@
                     href=""
                     aria-label="Ссылка на LinkedIn"
                   >
-                    <img src="./images/linkedin.svg" alt="LinkedIn" />
+                    <img
+                      class="img-team-social-element"
+                      src="./images/linkedin.svg"
+                      alt="LinkedIn"
+                    />
                   </a>
                 </li>
               </ul>
@@ -317,7 +368,11 @@
                     href=""
                     aria-label="Ссылка на Instagram"
                   >
-                    <img src="./images/instagram.svg" alt="instagram" />
+                    <img
+                      class="img-team-social-element"
+                      src="./images/instagram.svg"
+                      alt="instagram"
+                    />
                   </a>
                 </li>
                 <li class="social-network-element">
@@ -326,7 +381,11 @@
                     href=""
                     aria-label="Ссылка на Twitter"
                   >
-                    <img src="./images/twitter.svg" alt="Twitter" />
+                    <img
+                      class="img-team-social-element"
+                      src="./images/twitter.svg"
+                      alt="Twitter"
+                    />
                   </a>
                 </li>
                 <li class="social-network-element">
@@ -335,7 +394,11 @@
                     href=""
                     aria-label="Ссылка на Facebook"
                   >
-                    <img src="./images/facebook.svg" alt="Facebook" />
+                    <img
+                      class="img-team-social-element"
+                      src="./images/facebook.svg"
+                      alt="Facebook"
+                    />
                   </a>
                 </li>
                 <li class="social-network-element">
@@ -344,7 +407,11 @@
                     href=""
                     aria-label="Ссылка на LinkedIn"
                   >
-                    <img src="./images/linkedin.svg" alt="LinkedIn" />
+                    <img
+                      class="img-team-social-element"
+                      src="./images/linkedin.svg"
+                      alt="LinkedIn"
+                    />
                   </a>
                 </li>
               </ul>
@@ -409,24 +476,36 @@
           <b class="join-in">Присоединяйтесь</b>
           <!--Hero секция-->
           <ul class="social-link-list">
-            <li class="active-social-link">
+            <li class="active-social-link-footer">
               <a href="" aria-label="Ссылка на Instagram"
-                ><img src="./images/instagram.svg" alt="instagram"
+                ><img
+                  class="img-social-footer"
+                  src="./images/instagram.svg"
+                  alt="instagram"
               /></a>
             </li>
-            <li class="active-social-link">
+            <li class="active-social-link-footer">
               <a href="" aria-label="Ссылка на Twitter"
-                ><img src="./images/twitter.svg" alt="Twitter"
+                ><img
+                  class="img-social-footer"
+                  src="./images/twitter.svg"
+                  alt="Twitter"
               /></a>
             </li>
-            <li class="active-social-link">
+            <li class="active-social-link-footer">
               <a href="" aria-label="Ссылка на Facebook"
-                ><img src="./images/facebook.svg" alt="Facebook"
+                ><img
+                  class="img-social-footer"
+                  src="./images/facebook.svg"
+                  alt="Facebook"
               /></a>
             </li>
-            <li class="active-social-link">
+            <li class="active-social-link-footer">
               <a href="" aria-label="Ссылка на LinkedIn"
-                ><img src="./images/linkedin.svg" alt="LinkedIn"
+                ><img
+                  class="img-social-footer"
+                  src="./images/linkedin.svg"
+                  alt="LinkedIn"
               /></a>
             </li>
           </ul>
