--- a/portfolio.html
+++ b/portfolio.html
@@ -38,181 +38,183 @@
       </ul>
     </header>
     <main>
-      <div class="section-gallery">
-        <h1 hidden>Галерея работ</h1>
-        <ul class="filter-button-container">
-          <li class="filter-button-item">
-            <button class="filter-button" type="button">Все</button>
-          </li>
-          <li class="filter-button-item">
-            <button class="filter-button" type="button">Веб-сайты</button>
-          </li>
-          <li class="filter-button-item">
-            <button class="filter-button" type="button">Приложения</button>
-          </li>
-          <li class="filter-button-item">
-            <button class="filter-button" type="button">Дизайн</button>
-          </li>
-          <li class="filter-button-item">
-            <button class="filter-button" type="button">Маркетинг</button>
-          </li>
-        </ul>
-        <ul class="gallery-list">
-          <li class="list-work-item">
-            <div class="img-gallery">
-              <a class="link-work-element" href="">
-                <img
-                  class="img-work-element"
-                  src="./images-2/port-0.jpg"
-                  alt="Технокряк"
-                  width="370"
-                />
-              </a>
-            </div>
-            <div class="gallery-element">
-              <h2 class="list-work-name">Технокряк</h2>
-              <p class="list-work-type">Веб-сайт</p>
-            </div>
-            <!--<p class="list-work-text">
+      <section class="section-portfolio">
+        <div class="container-gallery">
+          <h1 hidden>Галерея работ</h1>
+          <ul class="filter-button-container">
+            <li class="filter-button-item">
+              <button class="filter-button" type="button">Все</button>
+            </li>
+            <li class="filter-button-item">
+              <button class="filter-button" type="button">Веб-сайты</button>
+            </li>
+            <li class="filter-button-item">
+              <button class="filter-button" type="button">Приложения</button>
+            </li>
+            <li class="filter-button-item">
+              <button class="filter-button" type="button">Дизайн</button>
+            </li>
+            <li class="filter-button-item">
+              <button class="filter-button" type="button">Маркетинг</button>
+            </li>
+          </ul>
+          <ul class="gallery-list">
+            <li class="list-work-item">
+              <div class="img-gallery">
+                <a class="link-work-element" href="">
+                  <img
+                    class="img-work-element"
+                    src="./images-2/port-0.jpg"
+                    alt="Технокряк"
+                    width="370"
+                  />
+                </a>
+              </div>
+              <div class="gallery-element">
+                <h2 class="list-work-name">Технокряк</h2>
+                <p class="list-work-type">Веб-сайт</p>
+              </div>
+              <!--<p class="list-work-text">
                       Технокряк это современная площадка распространения
                       коронавируса. Компании используют эту платформу для
                       цифрового шпионажа и атак на защищённые сервера
                       конкурентов.
                     </p>-->
-          </li>
-          <li class="list-work-item">
-            <div class="img-gallery">
-              <a class="link-work-element" href="">
-                <img
-                  class="img-work-element"
-                  src="./images-2/port-1.jpg"
-                  alt="Постер New Orlean vs Golden Star"
-                  width="370"
-                  height="294"
-                />
-              </a>
-            </div>
-            <div class="gallery-element">
-              <h2 class="list-work-name">
-                Постер New Orlean vs Golden Star
-              </h2>
-              <p class="list-work-type">Дизайн</p>
-            </div>
-          </li>
-          <li class="list-work-item">
-            <div class="img-gallery">
-              <a class="link-work-element" href="">
-                <img
-                  class="img-work-element"
-                  src="./images-2/port-2.jpg"
-                  alt="Ресторан Seafood"
-                  width="370"
-                />
-              </a>
-            </div>
-            <div class="gallery-element">
-              <h2 class="list-work-name">Ресторан Seafood</h2>
-              <p class="list-work-type">Приложение</p>
-            </div>
-          </li>
-          <li class="list-work-item">
-            <div class="img-gallery">
-              <a class="link-work-element" href="">
-                <img
-                  class="img-work-element"
-                  src="./images-2/port-3.jpg"
-                  alt="Проект Prime"
-                  width="370"
-              /></a>
-            </div>
-            <div class="gallery-element">
-              <h2 class="list-work-name">Проект Prime</h2>
-              <p class="list-work-type">Маркетинг</p>
-            </div>
-          </li>
-          <li class="list-work-item">
-            <div class="img-gallery">
-              <a class="link-work-element" href="">
-                <img
-                  class="img-work-element"
-                  src="./images-2/port-4.jpg"
-                  alt="Проект Boxes"
-                  width="370"
-                />
-              </a>
-            </div>
-            <div class="gallery-element">
-              <h2 class="list-work-name">Проект Boxes</h2>
-              <p class="list-work-type">Приложение</p>
-            </div>
-          </li>
-          <li class="list-work-item">
-            <div class="img-gallery">
-              <a class="link-work-element" href="">
-                <img
-                  class="img-work-element"
-                  src="./images-2/port-5.jpg"
-                  alt="Inspiration has no Borders"
-                  width="370"
-              /></a>
-            </div>
-            <div class="gallery-element">
-              <h2 class="list-work-name" lang="en">
-                Inspiration has no Borders
-              </h2>
-              <p class="list-work-type">Веб-сайт</p>
-            </div>
-          </li>
-          <li class="list-work-item">
-            <div class="img-gallery">
-              <a class="link-work-element" href="">
-                <img
-                  class="img-work-element"
-                  src="./images-2/port-6.jpg"
-                  alt="Издание Limited Edition"
-                  width="370"
-                />
-              </a>
-            </div>
-            <div class="gallery-element">
-              <h2 class="list-work-name">Издание Limited Edition</h2>
-              <p class="list-work-type">Дизайн</p>
-            </div>
-          </li>
-          <li class="list-work-item">
-            <div class="img-gallery">
-              <a class="link-work-element" href="">
-                <img
-                  class="img-work-element"
-                  src="./images-2/port-7.jpg"
-                  alt="Проект LAB"
-                  width="370"
-                />
-              </a>
-            </div>
-            <div class="gallery-element">
-              <h2 class="list-work-name">Проект LAB</h2>
-              <p class="list-work-type">Маркетинг</p>
-            </div>
-          </li>
-          <li class="list-work-item">
-            <div class="img-gallery">
-              <a class="link-work-element" href="">
-                <img
-                  class="img-work-element"
-                  src="./images-2/port-8.jpg"
-                  alt="Growing Business"
-                  width="370"
-                />
-              </a>
-            </div>
-            <div class="gallery-element">
-              <h2 class="list-work-name" lang="en">Growing Business</h2>
-              <p class="list-work-type">Приложение</p>
-            </div>
-          </li>
-        </ul>
-      </div>
+            </li>
+            <li class="list-work-item">
+              <div class="img-gallery">
+                <a class="link-work-element" href="">
+                  <img
+                    class="img-work-element"
+                    src="./images-2/port-1.jpg"
+                    alt="Постер New Orlean vs Golden Star"
+                    width="370"
+                    height="294"
+                  />
+                </a>
+              </div>
+              <div class="gallery-element">
+                <h2 class="list-work-name">
+                  Постер New Orlean vs Golden Star
+                </h2>
+                <p class="list-work-type">Дизайн</p>
+              </div>
+            </li>
+            <li class="list-work-item">
+              <div class="img-gallery">
+                <a class="link-work-element" href="">
+                  <img
+                    class="img-work-element"
+                    src="./images-2/port-2.jpg"
+                    alt="Ресторан Seafood"
+                    width="370"
+                  />
+                </a>
+              </div>
+              <div class="gallery-element">
+                <h2 class="list-work-name">Ресторан Seafood</h2>
+                <p class="list-work-type">Приложение</p>
+              </div>
+            </li>
+            <li class="list-work-item">
+              <div class="img-gallery">
+                <a class="link-work-element" href="">
+                  <img
+                    class="img-work-element"
+                    src="./images-2/port-3.jpg"
+                    alt="Проект Prime"
+                    width="370"
+                /></a>
+              </div>
+              <div class="gallery-element">
+                <h2 class="list-work-name">Проект Prime</h2>
+                <p class="list-work-type">Маркетинг</p>
+              </div>
+            </li>
+            <li class="list-work-item">
+              <div class="img-gallery">
+                <a class="link-work-element" href="">
+                  <img
+                    class="img-work-element"
+                    src="./images-2/port-4.jpg"
+                    alt="Проект Boxes"
+                    width="370"
+                  />
+                </a>
+              </div>
+              <div class="gallery-element">
+                <h2 class="list-work-name">Проект Boxes</h2>
+                <p class="list-work-type">Приложение</p>
+              </div>
+            </li>
+            <li class="list-work-item">
+              <div class="img-gallery">
+                <a class="link-work-element" href="">
+                  <img
+                    class="img-work-element"
+                    src="./images-2/port-5.jpg"
+                    alt="Inspiration has no Borders"
+                    width="370"
+                /></a>
+              </div>
+              <div class="gallery-element">
+                <h2 class="list-work-name" lang="en">
+                  Inspiration has no Borders
+                </h2>
+                <p class="list-work-type">Веб-сайт</p>
+              </div>
+            </li>
+            <li class="list-work-item">
+              <div class="img-gallery">
+                <a class="link-work-element" href="">
+                  <img
+                    class="img-work-element"
+                    src="./images-2/port-6.jpg"
+                    alt="Издание Limited Edition"
+                    width="370"
+                  />
+                </a>
+              </div>
+              <div class="gallery-element">
+                <h2 class="list-work-name">Издание Limited Edition</h2>
+                <p class="list-work-type">Дизайн</p>
+              </div>
+            </li>
+            <li class="list-work-item">
+              <div class="img-gallery">
+                <a class="link-work-element" href="">
+                  <img
+                    class="img-work-element"
+                    src="./images-2/port-7.jpg"
+                    alt="Проект LAB"
+                    width="370"
+                  />
+                </a>
+              </div>
+              <div class="gallery-element">
+                <h2 class="list-work-name">Проект LAB</h2>
+                <p class="list-work-type">Маркетинг</p>
+              </div>
+            </li>
+            <li class="list-work-item">
+              <div class="img-gallery">
+                <a class="link-work-element" href="">
+                  <img
+                    class="img-work-element"
+                    src="./images-2/port-8.jpg"
+                    alt="Growing Business"
+                    width="370"
+                  />
+                </a>
+              </div>
+              <div class="gallery-element">
+                <h2 class="list-work-name" lang="en">Growing Business</h2>
+                <p class="list-work-type">Приложение</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
     <footer class="background-footer">
       <div class="container-footer">
@@ -232,24 +234,36 @@
           <b class="join-in">Присоединяйтесь</b>
           <!--Hero секция-->
           <ul class="social-link-list">
-            <li class="active-social-link">
+            <li class="active-social-link-footer">
               <a href="" aria-label="Ссылка на Instagram"
-                ><img src="./images/instagram.svg" alt="instagram"
+                ><img
+                  class="img-social-footer"
+                  src="./images/instagram.svg"
+                  alt="instagram"
               /></a>
             </li>
-            <li class="active-social-link">
+            <li class="active-social-link-footer">
               <a href="" aria-label="Ссылка на Twitter"
-                ><img src="./images/twitter.svg" alt="Twitter"
+                ><img
+                  class="img-social-footer"
+                  src="./images/twitter.svg"
+                  alt="Twitter"
               /></a>
             </li>
-            <li class="active-social-link">
+            <li class="active-social-link-footer">
               <a href="" aria-label="Ссылка на Facebook"
-                ><img src="./images/facebook.svg" alt="Facebook"
+                ><img
+                  class="img-social-footer"
+                  src="./images/facebook.svg"
+                  alt="Facebook"
               /></a>
             </li>
-            <li class="active-social-link">
+            <li class="active-social-link-footer">
               <a href="" aria-label="Ссылка на LinkedIn"
-                ><img src="./images/linkedin.svg" alt="LinkedIn"
+                ><img
+                  class="img-social-footer"
+                  src="./images/linkedin.svg"
+                  alt="LinkedIn"
               /></a>
             </li>
           </ul>
